# cli-task-manager

./: .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml
src/task_manager/: __init__.py  __main__.py  config.py  contracts.py  errors.py  models.py
src/task_manager/cli/: app.py  output.py  validators.py
src/task_manager/cli/commands/: add.py  complete.py  config_cmd.py  delete.py  list_.py  search.py  show.py  tag.py  update.py
src/task_manager/plugins/: hooks.py  loader.py
src/task_manager/storage/: __init__.py  json_backend.py  sqlite_backend.py
src/task_manager/utils/: filters.py  ids.py  time.py
tests/: conftest.py  test_cli_add.py  test_cli_list.py  test_config.py  test_filters.py  test_ids.py  test_models.py  test_plugins.py  test_storage_json.py  test_storage_protocol.py  test_storage_sqlite.py
