[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cli-task-manager"
version = "0.1.0"
description = "Production-grade CLI task manager with pluggable storage and plugin system"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "typer>=0.9",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
task = "task_manager.cli.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/task_manager"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["N818"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
